<resources>
    <string name="app_name">Turtorial1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="test">test</string>
    <string name="title_activity_display_message">DisplayMessage</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recycler_view_test">RecyclerViewTest</string>
    <string name="descr_image">descr_image</string>
    <string name="title_activity_gson_turtorial">GsonTurtorial</string>
    <string name="menu_refresh">Refresh Layout</string>
    <string name="title_activity_load_more">LoadMore</string>
    <string name="feed_image">Feed Image</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="app_title">DMobi</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="downloaded">Downloaded</string>
    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search something...</string>
    <string name="image_description_default">background</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="description_card_default">UserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf UserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsf dsf dsf dsfUserProfileActivity sdfsd ffasd fds fdsf sdfdsfdsf dsdsf dsf dsf</string>
</resources>
