<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/drawer_favourite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/favourite" />

        <item
            android:id="@+id/drawer_downloaded"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/downloaded" />

        <item
            android:id="@+id/drawer_more"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/more" />

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/settings" />

        <item android:id="@+id/search"
            android:title="Search..."
            android:icon="@drawable/ic_search_black_24dp"
            app:showAsAction="collapseActionView|ifRoom"
            app:actionViewClass="android.support.v7.widget.SearchView" />

        <item android:id="@+id/logout"
            android:title="Logout"
            android:icon="@drawable/ic_power_settings_new_white_24dp"
            app:showAsAction="collapseActionView|ifRoom"
            app:actionViewClass="android.support.v7.widget.SearchView" />

    </group>
</menu>